# cancel-safe

./: Cargo.toml  README.md
cancel-safe/: Cargo.toml
cancel-safe-proc/: Cargo.toml
cancel-safe-proc/examples/: example.rs
cancel-safe-proc/src/: lib.rs
cancel-safe/src/: lib.rs
