[package]
name = "cancel-safe-proc"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.79"
quote = "1.0.35"
syn = "2.0.58"


[dev-dependencies]
tokio = { version = "1.37", features = ["rt", "rt-multi-thread", "macros", "time"] }
cancel-safe = { path = "../cancel-safe" }

